tests/build_crystal/fail_insufficient_inputs.stderr
error[E0432]: unresolved import `ccmat::Atom`
 --> tests/build_crystal/fail_insufficient_inputs.rs:1:31
  |
1 | use ccmat::{lattice_angstrom, Atom, CrystalBuilder};
  |                               ^^^^ no `Atom` in the root

error[E0308]: mismatched types
  --> tests/build_crystal/fail_insufficient_inputs.rs:11:23
   |
11 |         .with_lattice(lattice)
   |          ------------ ^^^^^^^ expected `&Lattice`, found `Lattice`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> src/lib.rs
   |
   |     pub fn with_lattice(self, lattice: &Lattice) -> CrystalBuilder<LatticeSet, A> {
   |            ^^^^^^^^^^^^
help: consider borrowing here
   |
11 |         .with_lattice(&lattice)
   |                       +

error[E0599]: no method named `build` found for struct `CrystalBuilder<LatticeSet, SitesNotSet>` in the current scope
  --> tests/build_crystal/fail_insufficient_inputs.rs:12:10
   |
10 |       let _ = CrystalBuilder::new()
   |  _____________-
11 | |         .with_lattice(lattice)
12 | |         .build()
   | |         -^^^^^ method not found in `CrystalBuilder<LatticeSet, SitesNotSet>`
   | |_________|
   |
   |
   = note: the method was found for
           - `CrystalBuilder<LatticeSet, SitesSet>`
